fixing sonarqube properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,7 +3,11 @@ sonar.projectKey=Moussier24_oc-dev-fullstack-p10
 
 # Sources
 sonar.sources=back/src/main/java,front/src
-sonar.tests=back/src/test/java,front/src/app/**/*.spec.ts
+sonar.tests=back/src/test/java,front/src/app
+
+# Inclusions/Exclusions
+sonar.test.inclusions=**/*.spec.ts,**/*Test.java
+sonar.exclusions=**/node_modules/**,**/*.spec.ts
 
 # Java configuration
 sonar.java.source=11
@@ -13,9 +17,11 @@ sonar.coverage.jacoco.xmlReportPaths=back/target/site/jacoco/jacoco.xml
 
 # TypeScript configuration
 sonar.typescript.lcov.reportPaths=front/coverage/lcov.info
+sonar.javascript.lcov.reportPaths=front/coverage/lcov.info
+
+# Additional configurations
+sonar.sourceEncoding=UTF-8
+sonar.host.url=https://sonarcloud.io
 
 # Quality Gates (utilisant les paramètres par défaut de SonarCloud)
 sonar.qualitygate.wait=true
-
-# Exclusions
-sonar.exclusions=**/node_modules/**,**/*.spec.ts 
