--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,7 +7,7 @@ sonar.tests=back/src/test/java,front/src/app
 
 # Inclusions/Exclusions
 sonar.test.inclusions=**/*.spec.ts,**/*Test.java
-sonar.exclusions=**/node_modules/**,**/*.spec.ts
+sonar.exclusions=**/node_modules/**,**/*.spec.ts,**/target/**
 
 # Java configuration
 sonar.java.source=11
