--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -73,6 +73,17 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
+        with:
+          java-version: "11"
+          distribution: "adopt"
+
+      - name: Build Backend
+        run: |
+          cd back
+          mvn clean package -DskipTests
+
       - name: Download Backend Test Results
         uses: actions/download-artifact@v3
         with:
