--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -7,7 +7,7 @@ on:
     branches: [main]
 
 jobs:
-  backend-tests:
+  backend:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -34,7 +34,26 @@ jobs:
           name: backend-test-results
           path: back/target/site/jacoco/
 
-  frontend-tests:
+      - name: SonarCloud Scan Backend
+        uses: SonarSource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        with:
+          projectBaseDir: back
+          args: >
+            -Dsonar.projectKey=Moussier24_oc-dev-fullstack-p10-back
+            -Dsonar.organization=moussier24
+
+      - name: Build and Push Backend Docker
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        uses: docker/build-push-action@v4
+        with:
+          context: ./back
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/bobapp-backend:latest
+
+  frontend:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -65,64 +84,23 @@ jobs:
           name: frontend-test-results
           path: front/coverage/
 
-  sonarcloud:
-    needs: [backend-tests, frontend-tests]
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-
-      - name: Set up JDK 11
-        uses: actions/setup-java@v3
-        with:
-          java-version: "11"
-          distribution: "adopt"
-
-      - name: Build Backend
-        run: |
-          cd back
-          mvn clean package -DskipTests
-
-      - name: Download Backend Test Results
-        uses: actions/download-artifact@v3
-        with:
-          name: backend-test-results
-          path: back/target/site/jacoco/
-
-      - name: Download Frontend Test Results
-        uses: actions/download-artifact@v3
-        with:
-          name: frontend-test-results
-          path: front/coverage/
-
-      - name: SonarCloud Scan
+      - name: SonarCloud Scan Frontend
         uses: SonarSource/sonarcloud-github-action@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-
-  docker:
-    needs: [backend-tests, frontend-tests]
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
+        with:
+          projectBaseDir: front
 
       - name: Login to DockerHub
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and Push Backend
-        uses: docker/build-push-action@v4
-        with:
-          context: ./back
-          push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/bobapp-backend:latest
-
-      - name: Build and Push Frontend
+      - name: Build and Push Frontend Docker
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         uses: docker/build-push-action@v4
         with:
           context: ./front
